--- a/contact.html
+++ b/contact.html
@@ -111,11 +111,11 @@
 <div class="row">
 <div class="col">
 <div class="home_content">
-<div class="home_title">About <span>PNVM</span></div>
+<div class="home_title">Contact <span>Us</span></div>
 <div class="breadcrumbs">
 <ul>
 <li><a href="#">Home</a></li>
-<li>About PNVM</li>
+<li>Contact Us</li>
 </ul>
 </div>
 </div>
