--- a/facilities.html
+++ b/facilities.html
@@ -99,7 +99,7 @@
 </div>
 <div class="menu_extra">
 <div class="menu_appointment"><a href="contact.html">Request an Appointment</a></div>
-<div class="menu_emergencies">For Emergencies: +563 47558 623</div>
+<div class="menu_emergencies">For Emergencies: +91 484 4860663, 2390097</div>
 </div>
 </div>
 </div>
