--- a/about.html
+++ b/about.html
@@ -91,7 +91,7 @@
 <ul class="menu_list menu_mm">
 <li class="menu_item menu_mm"><a href="index.html">Home</a></li>
 <li class="menu_item menu_mm"><a href="about.html">About us</a></li>
-<li class="menu_item menu_mm"><a href="treatments.html">Services</a></li>
+<li class="menu_item menu_mm"><a href="treatments.html">Treatments</a></li>
 <li class="menu_item menu_mm"><a href="facilities.html">Facilities</a></li>
 <li class="menu_item menu_mm"><a href="gallery.html">Gallery</a></li>
 <li class="menu_item menu_mm"><a href="contact.html">Contact</a></li>
