--- a/contact.html
+++ b/contact.html
@@ -90,8 +90,8 @@
 <div class="menu menu_mm">
 <ul class="menu_list menu_mm">
 <li class="menu_item menu_mm"><a href="index.html">Home</a></li>
-<li class="menu_item menu_mm"><a href="about.html">About us</a></li>
-<li class="menu_item menu_mm"><a href="treatments.html">Services</a></li>
+<li class="menu_item menu_mm"><a href="about.html">About Us</a></li>
+<li class="menu_item menu_mm"><a href="treatments.html">Treatments</a></li>
 <li class="menu_item menu_mm"><a href="facilities.html">Facilities</a></li>
 <li class="menu_item menu_mm"><a href="gallery.html">Gallery</a></li>
 <li class="menu_item menu_mm"><a href="contact.html">Contact</a></li>
