--- a/gallery.html
+++ b/gallery.html
@@ -4,7 +4,7 @@
 <title>PNVMCosmoDrema</title>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="description" content="CareMed demo project">
+<meta name="description" content="Cosmoderma, pnvm, drema hospital, cosmo derma hospital">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" type="text/css" href="styles/bootstrap4/bootstrap.min.css">
 <link href="plugins/font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
@@ -93,7 +93,7 @@
 <ul class="menu_list menu_mm">
 <li class="menu_item menu_mm"><a href="index.html">Home</a></li>
 <li class="menu_item menu_mm"><a href="about.html">About us</a></li>
-<li class="menu_item menu_mm"><a href="treatments.html">Services</a></li>
+<li class="menu_item menu_mm"><a href="treatments.html">Treatments</a></li>
 <li class="menu_item menu_mm"><a href="facilities.html">Facilities</a></li>
 <li class="menu_item menu_mm"><a href="gallery.html">Gallery</a></li>
 <li class="menu_item menu_mm"><a href="contact.html">Contact</a></li>
