--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>PNVMCosmoDrema</title>
+<title>PNVMCosmoDerma</title>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="description" content="Cosmoderma, pnvm, drema hospital, cosmo derma hospital">
