--- a/treatments.html
+++ b/treatments.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>PNVMCosmoDrema</title>
+<title>PNVMCosmoDerma</title>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="description" content="Cosmoderma, pnvm, drema hospital, cosmo derma hospital">
@@ -90,7 +90,7 @@
 <div class="menu menu_mm">
 <ul class="menu_list menu_mm">
 <li class="menu_item menu_mm"><a href="index.html">Home</a></li>
-<li class="menu_item menu_mm"><a href="about.html">About us</a></li>
+<li class="menu_item menu_mm"><a href="about.html">About Us</a></li>
 <li class="menu_item menu_mm"><a href="treatments.html">Treatments</a></li>
 <li class="menu_item menu_mm"><a href="facilities.html">Facilities</a></li>
 <li class="menu_item menu_mm"><a href="gallery.html">Gallery</a></li>
@@ -114,7 +114,7 @@
 <div class="home_title">Our <span>Treatments</span></div>
 <div class="breadcrumbs">
 <ul>
-<li><a href="#">Home</a></li>
+<li><a href="index.html">Home</a></li>
 <li>Treatments</li>
 </ul>
 </div>
