--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@ PNVM Hospital, Ernakulam, has been synonymous with effective skin care. Down the
 
 <div class="col-lg-7">
 <div class="about_content">
-<div class="section_title"><h2>Clinic is fully funtional with covid safety protocols</h2></div>
+<div class="section_title"><h2>Clinic is fully functional with covid safety protocols</h2></div>
 <div class="about_text">
 <p style="text-align: justify;">	
   Covid19 keeps on spreading quickly in India and across the world. At the last tally more than 16 million individuals have been tainted with the lethal infection internationally and 50,000 new cases have arisen in India just now. While the pandemic keeps on seething worldwide, plans rotating principally around friendly removing and individual cleanliness are in progress subsequently raising widespread worry as for the resuming different working environments.
@@ -518,7 +518,7 @@ Banerji Road,<br> cochin-682 018
 </div>
 </li>
 <li>
-<div class="footer_news_title"><strong>Phone:</strong> +91 484 4860663, 2390097<br>
+<div class="footer_news_title"><strong>Phone:</strong> +91 484 4860663, +91 9847044977<br>
               </div>
 <!-- <div class="footer_news_date">March 10, 2018</div> -->
 </li>
