--- a/contact.html
+++ b/contact.html
@@ -143,7 +143,7 @@ CONTACT US</h2></div>
             
           PNVM Hospital, Madhava Pharmacy jn.<br>
           Banerji Road, cochin-682 018<br>
-          Tel: +91 484 4860663, 2390097<br>
+          Tel: +91 484 4860663, +91 9847044977<br>
           Email : pnvmhospital@gmail.com
         
         </p>
