--- a/treatments.html
+++ b/treatments.html
@@ -373,7 +373,7 @@ Banerji Road,<br> cochin-682 018
 </div>
 </li>
 <li>
-<div class="footer_news_title"><strong>Phone:</strong> +91 484 4860663, 2390097<br>
+<div class="footer_news_title"><strong>Phone:</strong> +91 484 4860663, +91 9847044977<br>
               </div>
 <!-- <div class="footer_news_date">March 10, 2018</div> -->
 </li>
