--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
 <title>PNVMCosmoDerma</title>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="description" content="Cosmoderma, pnvm, derma hospital, cosmo derma hospital">
+<meta name="description" content="Cosmoderma, pnvm, derma hospital, cosmo derma hospital, skin care, skin care hospital, skin treatments, hospital, clinic, skin care clinic">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" type="text/css" href="styles/bootstrap4/bootstrap.min.css">
 <link href="plugins/font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
