--- a/about.html
+++ b/about.html
@@ -99,7 +99,7 @@
 </div>
 <div class="menu_extra">
 <div class="menu_appointment"><a href="contact.html">Request an Appointment</a></div>
-<div class="menu_emergencies">For Emergencies: +91 484 4860663, 2390097</div>
+<div class="menu_emergencies">For Emergencies: +91 484 4860663, +91 9847044977</div>
 </div>
 </div>
 </div>
@@ -326,7 +326,7 @@ Banerji Road,<br> cochin-682 018
 </div>
 </li>
 <li>
-<div class="footer_news_title"><strong>Phone:</strong> +91 484 4860663, 2390097<br>
+<div class="footer_news_title"><strong>Phone:</strong> +91 484 4860663, +91 9847044977<br>
               </div>
 <!-- <div class="footer_news_date">March 10, 2018</div> -->
 </li>
