--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 </div>
 <div class="menu_extra">
 <div class="menu_appointment"><a href="contact.html">Request an Appointment</a></div>
-<div class="menu_emergencies">For Emergencies: +91 484 4860663, 2390097</div>
+<div class="menu_emergencies">For Emergencies: +91 484 4860663, +91 9847044977</div>
  </div>
 </div>
 </div>
