--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
 <div class="section_title"><h2>A great tradition in skin care</h2></div>
 <div class="about_text">
 <p> 
-PNVM Hospital, Ernakulam, has been synonymous with effective skin care. Down the years, the hospital has provided world-class treatment for various skin problems to countless number of patients. One of the best Skin and Laser Cosmetology clinic, the hospital has ultra-modern facilities, providing advanced skin treatments.</p>
+PNVM Cosmo Derma Centre, Ernakulam, has been synonymous with effective skin care. Down the years, the Cosmo Derma Centre has provided world-class treatment for various skin problems to countless number of patients. One of the best Skin and Laser Cosmetology clinic, the Cosmo Derma Centre has ultra-modern facilities, providing advanced skin treatments.</p>
 </div>
 <div class="button about_button">
 <a href="about.html">read more</a>
@@ -340,7 +340,7 @@ PNVM Hospital, Ernakulam, has been synonymous with effective skin care. Down the
 <p style="text-align: justify;">	
   Covid19 keeps on spreading quickly in India and across the world. At the last tally more than 16 million individuals have been tainted with the lethal infection internationally and 50,000 new cases have arisen in India just now. While the pandemic keeps on seething worldwide, plans rotating principally around friendly removing and individual cleanliness are in progress subsequently raising widespread worry as for the resuming different working environments.
 <br>
- Instead of this, PNVM Hospital, Ernakulam, has been Clinic fully functional with covid safety protocols. We always care our patients life, so that we installed Coronaguard machine. Also our clinic provides air purifier with cross ventilation.</p>
+ Instead of this, PNVM Cosmo Derma Centre, Ernakulam, has been Clinic fully functional with covid safety protocols. We always care our patients life, so that we installed Coronaguard machine. Also our clinic provides air purifier with cross ventilation.</p>
 </div>
 <div class="button about_button">
 <a href="about.html">read more</a>
