--- a/about.html
+++ b/about.html
@@ -133,7 +133,7 @@
 <div class="section_title"><h2>	
 A GREAT TRADITION IN SKIN CARE</h2></div>
 <div class="about_text">
-<p style="text-align: justify;">PNVM Hospital, Ernakulam, has been synonymous with effective skin care. Down the years, the hospital has provided world-class treatment for various skin problems to countless number of patients. One of the best Skin and Laser Cosmetology clinic, the hospital has ultra-modern facilities, providing advanced skin treatments. Laser treatments, Laser hair removal, Skin rejuvenation, Chemical peels, Microdermabrasion, Spa skin treatment, IPL, Co2 laser, Botox and Fillers. An expert group of doctors, led by Dr.Prem, one of the leading dermatologists, is at your service.</p>
+<p style="text-align: justify;">PNVM Cosmo Derma Centre, Ernakulam, has been synonymous with effective skin care. Down the years, the Cosmo Derma Centre has provided world-class treatment for various skin problems to countless number of patients. One of the best Skin and Laser Cosmetology clinic, the Cosmo Derma Centre has ultra-modern facilities, providing advanced skin treatments. Laser treatments, Laser hair removal, Skin rejuvenation, Chemical peels, Microdermabrasion, Spa skin treatment, IPL, Co2 laser, Botox and Fillers. An expert group of doctors, led by Dr.Prem, one of the leading dermatologists, is at your service.</p>
 <!-- <p>Praesent luctus erat sit amet tortor aliquam bibendum. Nulla ut molestie augue, scelerisque consectetur quam. Dolor sit amet, consectetur adipiscing elit. Cura bitur ante leo, finibus quis est ut, tempor tincidunt ipsum. Nam consequat semper sollicitudin. Aliquam nec dapibus massa. Pellentesque in luctus ex.</p> -->
 </div>
 <div class="row loaders_container disp1">
