--- a/about.html
+++ b/about.html
@@ -318,7 +318,7 @@ ABOUT PNVM COSMO DERMA CENTRE</h2></div>
 <div class="footer_title">Useful Links</div>
 <ul>
 <li>
-<div class="footer_news_title"><a href="news.html">PNVM Hospital, Madhava Pharmacy jn.<br>
+<div class="footer_news_title"><a href="news.html">PNVM Cosmo Derma Centre, Madhava Pharmacy jn.<br>
 Banerji Road,<br> cochin-682 018
   <br><br>
 </a>
