--- a/contact.html
+++ b/contact.html
@@ -317,7 +317,7 @@ OUR LOCATION</h2></div>
 <div class="footer_title">Useful Links</div>
 <ul>
 <li>
-<div class="footer_news_title"><a href="news.html">PNVM Hospital, Madhava Pharmacy jn.<br>
+<div class="footer_news_title"><a href="news.html">PNVM Cosmo Derma Centre, Madhava Pharmacy jn.<br>
 Banerji Road,<br> cochin-682 018
   <br><br>
 </a>
