--- a/facilities.html
+++ b/facilities.html
@@ -350,7 +350,7 @@ In the past many doctors have treated Psoriasis and Vitiligo using the PUVA syst
 <div class="footer_title">Useful Links</div>
 <ul>
 <li>
-<div class="footer_news_title"><a href="news.html">PNVM Hospital, Madhava Pharmacy jn.<br>
+<div class="footer_news_title"><a href="news.html">PNVM Cosmo Derma Centre, Madhava Pharmacy jn.<br>
 Banerji Road,<br> cochin-682 018
   <br><br>
 </a>
