--- a/index.html
+++ b/index.html
@@ -510,7 +510,7 @@ PNVM Cosmo Derma Centre, Ernakulam, has been synonymous with effective skin care
 <div class="footer_title">Useful Links</div>
 <ul>
 <li>
-<div class="footer_news_title"><a href="news.html">PNVM Hospital, Madhava Pharmacy jn.<br>
+<div class="footer_news_title"><a href="news.html">PNVM Cosmo Derma Centre, Madhava Pharmacy jn.<br>
 Banerji Road,<br> cochin-682 018
   <br><br>
 </a>
