--- a/contact.html
+++ b/contact.html
@@ -141,7 +141,7 @@ CONTACT US</h2></div>
             ASST. PROFESSOR S.N. Medical College, Ernakulam Dist<br>
             DERMATOLOGIST & COSMETOLOGIST<br><br>
             
-          PNVM Hospital, Madhava Pharmacy jn.<br>
+          PNVM Cosmo Derma Centre, Madhava Pharmacy jn.<br>
           Banerji Road, cochin-682 018<br>
           Tel: +91 484 4860663, +91 9847044977<br>
           Email : pnvmhospital@gmail.com
