--- a/gallery.html
+++ b/gallery.html
@@ -18,6 +18,7 @@
      <link rel="stylesheet" type="text/css" href="plugins/OwlCarousel2-2.2.1/animate.css">
      <link rel="stylesheet" type="text/css" href="styles/about.css">
      <link rel="stylesheet" type="text/css" href="styles/responsive.css">
+     <link rel="shortcut icon" type="image/png" href="/images/favicon-32x32.png" />
      <link rel="stylesheet" type="text/css" href="styles/fs-gal.css">
      <!-- Global site tag (gtag.js) - Google Analytics -->
      <script async src="https://www.googletagmanager.com/gtag/js?id=G-6Y3MXE7079"></script>
