Updated Treatments & fixed 404's

--- a/facilities.html
+++ b/facilities.html
@@ -418,7 +418,7 @@
                                 <div class="footer_title">Useful Links</div>
                                 <ul>
                                     <li>
-                                        <div class="footer_news_title"><a href="news.html">PNVM Cosmo Derma Centre,
+                                        <div class="footer_news_title"><a href="index.html">PNVM Cosmo Derma Centre,
                                                 Madhava Pharmacy jn.<br>
                                                 Banerji Road,<br> cochin-682 018
                                                 <br><br>
