--- a/index.html
+++ b/index.html
@@ -545,7 +545,7 @@
                 <div class="footer_title">Useful Links</div>
                 <ul>
                   <li>
-                    <div class="footer_news_title"><a href="news.html">PNVM Cosmo Derma Centre, Madhava Pharmacy jn.<br>
+                    <div class="footer_news_title"><a href="index.html">PNVM Cosmo Derma Centre, Madhava Pharmacy jn.<br>
                         Banerji Road,<br> cochin-682 018
                         <br><br>
                       </a>
